# credit-card-fraud-detection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  api.py  dependencies.py  main.py  schemas.py  startup.py
app/core/: __init__.py  exceptions.py  logging.py  middleware.py  settings.py
app/routers/: __init__.py  health.py  meta.py  model.py  prediction.py
app/schemas/: __init__.py  meta.py  prediction.py  transaction.py
app/services/: __init__.py  history.py  model_service.py  prediction_service.py
app/utils/: __init__.py  risk.py  timing.py
configs/: config.yaml
dashboard/: __init__.py  api_client.py  app.py  config.py  sections.py  theme.py
dashboard/assets/: styles.css
dashboard/callbacks/: __init__.py  navigation.py  prediction.py  theme.py
dashboard/components/: __init__.py  cards.py  charts.py  navbar.py  prediction_form.py  sidebar.py
docs/: architecture.md
notebooks/: 01_exploratory_data_analysis.ipynb
src/: __init__.py  config.py  evaluate.py  exceptions.py  explain.py  logger.py  models.py  predict.py  preprocessing.py  tracking.py  train.py  tune.py
src/data/: __init__.py  data_generator.py  download.py  loader.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_dashboard.py  test_evaluate.py  test_predict.py  test_preprocessing.py  test_schemas.py  test_services.py  test_train.py
