[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-card-fraud-detection"
version = "1.0.0"
description = "Machine-learning pipeline for credit card fraud detection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["src*", "app*", "dashboard*"]

# ---------------------------------------------------------------------------
# Black — code formatter
# ---------------------------------------------------------------------------
[tool.black]
line-length = 90
target-version = ["py310", "py311"]

# ---------------------------------------------------------------------------
# isort — import sorter (black-compatible profile)
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 90
known_first_party = ["src", "app", "dashboard"]

# ---------------------------------------------------------------------------
# Ruff — linter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: pyupgrade,
# C4: comprehensions, SIM: simplify.
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM"]
ignore = [
    "E501",   # line length handled by black
    "B008",   # FastAPI uses callables in argument defaults (Depends, etc.)
    "UP038",  # isinstance(x, X | Y) is slower at runtime than the tuple form
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# ---------------------------------------------------------------------------
# mypy — static type checking (pragmatic: third-party stubs are often absent
# for the ML stack, so missing imports are ignored rather than failing).
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ['^build/', '^dist/']

[[tool.mypy.overrides]]
# Tests favour brevity over exhaustive annotations.
module = "tests.*"
ignore_errors = true
